--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.twaun95.moviestar" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".application.MovieStarApplication"
         android:allowBackup="true"
@@ -12,6 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MovieStar"
         tools:targetApi="31" >
         <activity
