--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieStar"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="30">
         <activity
             android:name=".presentation.ui.main.MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
